--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,14 +7,15 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
+    "axios": "^0.20.0",
     "material-ui-icons": "^1.0.0-beta.36",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
+    "react-chips": "^0.8.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4",
-    "axios": "^0.20.0"
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
